Fixed some layout issues with the move to the new sidepane/header

--- a/bigboards-mmc/src/public/styles/mmc.css
+++ b/bigboards-mmc/src/public/styles/mmc.css
@@ -63,10 +63,10 @@ textarea {
 
 iframe {
     position: absolute;
-    top: 105px;
+    top: 0;
     left: 0;
     width: 100%;
-    height: calc(100% - 105px);
+    height: 100%;
     border: none;
 }
 
